--- a/index.html
+++ b/index.html
@@ -5,10 +5,124 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Agentur Schmidt</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script language="javascript" type="text/javascript" src="index.js"></script>
 </head>
 <body>
-   
-    <h1>Hello World!</h1>
+
+    <header class="header">
+        <a href="" class="logo">WebJungle</a>
+        <input class="menu-btn" type="checkbox" id="menu-btn"/>
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu">
+          <li><a href="#work">Leistungen</a></li>
+          <li><a href="#about">Über Uns</a></li>
+          <li><a href="#careers">Referenzen</a></li>
+          <li><a href="#contact">Kontakt</a></li>
+        </ul>
+    </header>
+
+    <div class="container">
+        <img class="center-fit" src="tropic.jpg" alt="Startbild">
+        <h1 class="centered">Die einfache Lösung für Dein Anliegen<br><button class="startbutton">Erfahre mehr über uns<br><img src="pfeil-nach-unten.png" class="icon"></button></h1>
+    </div>
+
+    <h2 id="leistung">Das passende Angebot für Dich</h2>
+
+    <div class="wrapper">
+        <div class="table basic">
+          <div class="price-section">
+            <div class="price-area">
+              <div class="inner-area">
+                <span class="text">1099 €</span>
+              </div>
+            </div>
+          </div>
+          <div class="package-name"></div>
+          <ul class="features">
+            <li>
+              <span class="list-name">One Selected Template</span>
+              <span class="icon check"><i class="fas fa-check"></i></span>
+            </li>
+            <li>
+              <span class="list-name">100% Responsive Design</span>
+              <span class="icon check"><i class="fas fa-check"></i></span>
+            </li>
+            <li>
+              <span class="list-name">Credit Remove Permission</span>
+              <span class="icon cross"><i class="fas fa-times"></i></span>
+            </li>
+            <li>
+              <span class="list-name">Lifetime Template Updates</span>
+              <span class="icon cross"><i class="fas fa-times"></i></span>
+            </li>
+          </ul>
+          <div class="btn"><button>Purchase</button></div>
+        </div>
+        <div class="table premium">
+          <div class="ribbon"><span>Empfehlung</span></div>
+          <div class="price-section">
+            <div class="price-area">
+              <div class="inner-area">
+                <span class="text">1599 €</span>
+              </div>
+            </div>
+          </div>
+          <div class="package-name"></div>
+          <ul class="features">
+            <li>
+              <span class="list-name">Five Existing Templates</span>
+              <span class="icon check"><i class="fas fa-check"></i></span>
+            </li>
+            <li>
+              <span class="list-name">100% Responsive Design</span>
+              <span class="icon check"><i class="fas fa-check"></i></span>
+            </li>
+            <li>
+              <span class="list-name">Credit Remove Permission</span>
+              <span class="icon check"><i class="fas fa-check"></i></span>
+            </li>
+            <li>
+              <span class="list-name">Lifetime Template Updates</span>
+              <span class="icon cross"><i class="fas fa-times"></i></span>
+            </li>
+          </ul>
+          <div class="btn"><button>Purchase</button></div>
+        </div>
+        <div class="table ultimate">
+          <div class="price-section">
+            <div class="price-area">
+              <div class="inner-area">
+                <span class="text">1999 €</span>
+              </div>
+            </div>
+          </div>
+          <div class="package-name"></div>
+          <ul class="features">
+            <li>
+              <span class="list-name">All Existing Templates</span>
+              <span class="icon check"><i class="fas fa-check"></i></span>
+            </li>
+            <li>
+              <span class="list-name">100% Responsive Design</span>
+              <span class="icon check"><i class="fas fa-check"></i></span>
+            </li>
+            <li>
+              <span class="list-name">Credit Remove Permission</span>
+              <span class="icon check"><i class="fas fa-check"></i></span>
+            </li>
+            <li>
+              <span class="list-name">Lifetime Template Updates</span>
+              <span class="icon check"><i class="fas fa-check"></i></span>
+            </li>
+          </ul>
+          <div class="btn"><button>Purchase</button></div>
+        </div>
+    </div>
 
 </body>
 </html>
