--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
           <li><a href="#work">Leistungen</a></li>
-          <li><a href="#about">Über Uns</a></li>
+          <li><a href="#about">Das Team</a></li>
           <li><a href="#careers">Referenzen</a></li>
           <li><a href="#contact">Kontakt</a></li>
         </ul>
@@ -31,7 +31,7 @@
         <h1 class="centered">Die einfache Lösung für Dein Anliegen<br><button class="startbutton">Erfahre mehr über uns<br><img src="pfeil-nach-unten.png" class="icon"></button></h1>
     </div>
 
-    <h2 id="leistung">Das passende Angebot für Dich</h2>
+    <h2 id="leistung">Finde das passende Angebot für Dich</h2>
 
     <div class="wrapper">
         <div class="table basic">
@@ -121,6 +121,47 @@
             </li>
           </ul>
           <div class="btn"><button>Purchase</button></div>
+        </div>
+    </div>
+
+    <h2 id="leistung">Lerne unser Team kennen</h2>
+
+    <div class="wrapper">
+        <div class="table basic">
+          <img src="Profil1.png" class="profil">
+          <div class="textInfo">
+            <h3>Melanie Musterfrau</h3>
+            <h4>Grafikdesignerin</h4>
+          </div>
+          <div class="socialIcons">
+            <a href="https:\\www.facebook.com"><img src="https://img.icons8.com/small/32/000000/facebook.png" class="Icon"/></a>
+            <a href="https:\\www.twitter.com"><img src="https://img.icons8.com/small/32/000000/twitter.png" class="Icon"/></a>
+            <a href="https:\\www.instagram.com"><img src="https://img.icons8.com/small/32/000000/instagram-new.png" class="Icon"/></a>
+          </div>
+        </div>
+        <div class="table basic">
+          <img src="Profil2.png" class="profil">
+          <div class="textInfo">
+            <h3>Melanie Musterfrau</h3>
+            <h4>Grafikdesignerin</h4>
+          </div>
+          <div class="socialIcons"> 
+            <a href="https:\\facebook.com"><img src="https://img.icons8.com/small/32/000000/facebook.png" class="Icon"/></a>
+            <a href="https:\\www.twitter.com"><img src="https://img.icons8.com/small/32/000000/twitter.png" class="Icon"/></a>
+            <a href="https:\\www.instagram.com"><img src="https://img.icons8.com/small/32/000000/instagram-new.png" class="Icon"/></a>
+          </div>
+        </div>
+        <div class="table basic" >
+          <img src="Profil3.png" class="profil">
+          <div class="textInfo">
+            <h3>Melanie Musterfrau</h3>
+            <h4>Grafikdesignerin</h4>
+          </div>
+          <div class="socialIcons">
+            <a href="https:\\www.facebook.com"><img src="https://img.icons8.com/small/32/000000/facebook.png" class="Icon"/></a>
+            <a href="https:\\www.twitter.com"><img src="https://img.icons8.com/small/32/000000/twitter.png" class="Icon"/></a>
+            <a href="https:\\www.instagram.com"><img src="https://img.icons8.com/small/32/000000/instagram-new.png" class="Icon"/></a>
+          </div>
         </div>
     </div>
 
