--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <div class="table basic">
           <img src="Profil1.png" class="profil">
           <div class="textInfo">
-            <h3>Melanie Musterfrau</h3>
-            <h4>Grafikdesignerin</h4>
+            <h3>Martin Krüger</h3>
+            <h4>Fullstack-Entwickler</h4>
           </div>
           <div class="socialIcons">
             <a href="https:\\www.facebook.com"><img src="https://img.icons8.com/small/32/000000/facebook.png" class="Icon"/></a>
@@ -142,8 +142,8 @@
         <div class="table basic">
           <img src="Profil2.png" class="profil">
           <div class="textInfo">
-            <h3>Melanie Musterfrau</h3>
-            <h4>Grafikdesignerin</h4>
+            <h3>Max Mustermann</h3>
+            <h4>SEO-Experte</h4>
           </div>
           <div class="socialIcons"> 
             <a href="https:\\facebook.com"><img src="https://img.icons8.com/small/32/000000/facebook.png" class="Icon"/></a>
