--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
     <div class="container">
         <img class="center-fit" src="tropic.jpg" alt="Startbild">
-        <h1 class="centered">Die einfache Lösung für Dein Anliegen<br><button class="startbutton">Erfahre mehr über uns<br><img src="pfeil-nach-unten.png" class="icon"></button></h1>
+        <h1 class="centered">Die einfache Lösung für Dein Anliegen<br><button class="startbutton"><a href="#team" style="color: #e1c5aa; text-decoration: none;">Erfahre mehr über uns</a><br><a href="#team"><img src="pfeil-nach-unten.png" class="icon"></button></a></h1>
     </div>
 
     <h2 id="leistung">Finde das passende Angebot für Dich</h2>
 
-    <div class="wrapper">
+    <div id="team" class="wrapper">
         <div class="table basic">
           <div class="price-section">
             <div class="price-area">
@@ -122,7 +122,7 @@
           </ul>
           <div class="btn"><button>Purchase</button></div>
         </div>
-    </div>
+    </div id="team">
 
     <h2 id="leistung">Lerne unser Team kennen</h2>
 
