--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Agentur Schmidt</title>
+    <title>WebJungle</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
@@ -19,10 +19,9 @@
         <input class="menu-btn" type="checkbox" id="menu-btn"/>
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-          <li><a href="#work">Leistungen</a></li>
-          <li><a href="#about">Das Team</a></li>
-          <li><a href="#careers">Referenzen</a></li>
-          <li><a href="#contact">Kontakt</a></li>
+          <li class="menu1"><a href="#leistung" class="menu1">Leistungen</a></li>
+          <li class="menu1"><a href="#team" class="menu1">Das Team</a></li>
+          <li class="menu1"><a href="#contact" class="menu1">Kontakt</a></li>
         </ul>
     </header>
 
@@ -33,7 +32,7 @@
 
     <h2 id="leistung">Finde das passende Angebot für Dich</h2>
 
-    <div id="team" class="wrapper">
+    <div class="wrapper">
         <div class="table basic">
           <div class="price-section">
             <div class="price-area">
@@ -45,23 +44,23 @@
           <div class="package-name"></div>
           <ul class="features">
             <li>
-              <span class="list-name">One Selected Template</span>
+              <span class="list-name">Bis zu 3 Seiten</span>
               <span class="icon check"><i class="fas fa-check"></i></span>
             </li>
             <li>
-              <span class="list-name">100% Responsive Design</span>
+              <span class="list-name">100% responsives Design</span>
               <span class="icon check"><i class="fas fa-check"></i></span>
             </li>
             <li>
-              <span class="list-name">Credit Remove Permission</span>
+              <span class="list-name">Überarbeitung der Webseite</span>
               <span class="icon cross"><i class="fas fa-times"></i></span>
             </li>
             <li>
-              <span class="list-name">Lifetime Template Updates</span>
+              <span class="list-name">1 Jahr lang Support</span>
               <span class="icon cross"><i class="fas fa-times"></i></span>
             </li>
           </ul>
-          <div class="btn"><button>Purchase</button></div>
+          <div class="btn"><button>Angebot auswählen</button></div>
         </div>
         <div class="table premium">
           <div class="ribbon"><span>Empfehlung</span></div>
@@ -75,23 +74,23 @@
           <div class="package-name"></div>
           <ul class="features">
             <li>
-              <span class="list-name">Five Existing Templates</span>
+              <span class="list-name">Bis zu 10 Seiten</span>
               <span class="icon check"><i class="fas fa-check"></i></span>
             </li>
             <li>
-              <span class="list-name">100% Responsive Design</span>
+              <span class="list-name">100% responsives Design</span>
               <span class="icon check"><i class="fas fa-check"></i></span>
             </li>
             <li>
-              <span class="list-name">Credit Remove Permission</span>
-              <span class="icon check"><i class="fas fa-check"></i></span>
+              <span class="list-name">Überarbeitung der Webseite</span>
+              <span class="icon cross"><i class="fas fa-times"></i></span>
             </li>
             <li>
-              <span class="list-name">Lifetime Template Updates</span>
+              <span class="list-name">1 Jahr lang Support</span>
               <span class="icon cross"><i class="fas fa-times"></i></span>
             </li>
           </ul>
-          <div class="btn"><button>Purchase</button></div>
+          <div class="btn"><button>Angebot auswählen</button></div>
         </div>
         <div class="table ultimate">
           <div class="price-section">
@@ -104,29 +103,29 @@
           <div class="package-name"></div>
           <ul class="features">
             <li>
-              <span class="list-name">All Existing Templates</span>
+              <span class="list-name">Über 10 Seiten</span>
               <span class="icon check"><i class="fas fa-check"></i></span>
             </li>
             <li>
-              <span class="list-name">100% Responsive Design</span>
+              <span class="list-name">100% responsives Design</span>
               <span class="icon check"><i class="fas fa-check"></i></span>
             </li>
             <li>
-              <span class="list-name">Credit Remove Permission</span>
-              <span class="icon check"><i class="fas fa-check"></i></span>
+              <span class="list-name">Überarbeitung der Webseite</span>
+              <span class="icon cross"><i class="fas fa-times"></i></span>
             </li>
             <li>
-              <span class="list-name">Lifetime Template Updates</span>
-              <span class="icon check"><i class="fas fa-check"></i></span>
+              <span class="list-name">1 Jahr lang Support</span>
+              <span class="icon cross"><i class="fas fa-times"></i></span>
             </li>
           </ul>
-          <div class="btn"><button>Purchase</button></div>
+          <div class="btn"><button>Angebot auswählen</button></div>
         </div>
-    </div id="team">
+    </div>
 
     <h2 id="leistung">Lerne unser Team kennen</h2>
 
-    <div class="wrapper">
+    <div id="team" class="wrapper">
         <div class="table basic">
           <img src="Profil1.png" class="profil">
           <div class="textInfo">
@@ -164,6 +163,65 @@
           </div>
         </div>
     </div>
+
+    <h2 id="leistung">Kontaktiere uns gerne</h2>
+
+    <div class="Container">  
+      <form id="contact" action="" method="post">
+        <h3>Wir antworten dir innerhalb von 24 Stunden!</h3>
+        <fieldset>
+          <input placeholder="Vor- und Nachname..." type="text" tabindex="1" required autofocus>
+        </fieldset>
+        <fieldset>
+          <input placeholder="E-Mail..." type="email" tabindex="2" required>
+        </fieldset>
+        <fieldset>
+          <input placeholder="Telefonnummer.." type="tel" tabindex="3" required>
+        </fieldset>
+        <fieldset>
+          <input placeholder="Mögliche Webseiteadresse..." type="url" tabindex="4" required>
+        </fieldset>
+        <fieldset>
+          <textarea placeholder="Deine Nachricht an uns..." tabindex="5" required></textarea>
+        </fieldset>
+        <fieldset>
+          <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Absenden</button>
+        </fieldset>
+      </form> 
+    </div>
+
+    <footer class="site-footer">
+      <div class="contain">
+        <div class="row">
+          <div class="col-xs-6 col-md-3">
+            <h6>WebJungle</h6>
+            <ul class="footer-links">
+              <a href="#">AGB</a><br>
+              <a href="#">Impressum</a><br>
+              <a href="#">Datenschutz<a>
+            </ul>
+          </div>
+
+          <div class="col-xs-6 col-md-3">
+            <h6>Links</h6>
+            <ul class="footer-links">
+              <a href="#leistung">Leistungen</a><br>
+              <a href="#team">Unser Team</a><br>
+              <a href="#contact">Kontakt</a>
+            </ul>
+          </div>
+        </div>
+        <hr>
+      </div>
+      <div class="contain">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by WebJungle.
+            </p>
+          </div>
+        </div>
+      </div>
+  </footer>
 
 </body>
 </html>
