--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <form id="contact" action="" method="post">
         <h3>Wir antworten dir innerhalb von 24 Stunden!</h3>
         <fieldset>
-          <input placeholder="Vor- und Nachname..." type="text" tabindex="1" required autofocus>
+          <input placeholder="Vor- und Nachname..." type="text" tabindex="1">
         </fieldset>
         <fieldset>
           <input placeholder="E-Mail..." type="email" tabindex="2" required>
